--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "arrilot/bitrix-migrations",
+  "name": "broadcastaddress/bitrix-migrations",
   "license": "MIT",
   "description": "Database migrations for Bitrix CMS",
   "keywords": [
@@ -10,13 +10,17 @@
     {
       "name": "Nekrasov Ilya",
       "email": "nekrasov.ilya90@gmail.com"
+    },
+    {
+      "name": "Address Broadcast ",
+      "email": "address.broadcast@gmail.com"
     }
   ],
-  "homepage": "https://github.com/Arrilot/bitrix-migrations",
+  "homepage": "https://github.com/broadcastaddress/bitrix-migrations",
   "require": {
     "php": ">=5.5.0",
     "symfony/console": "~2|~3|~4",
-    "tightenco/collect": "5.*"
+    "tightenco/collect": "^5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
