--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
   "require": {
     "php": ">=5.5.0",
     "symfony/console": "~2|~3|~4",
-    "tightenco/collect": "^5.0"
+    "tightenco/collect": "~5|~6|~7|~8"
+    
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
