--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/broadcastaddress/bitrix-migrations",
   "require": {
     "php": ">=5.5.0",
-    "symfony/console": "~2|~3|~4",
+    "symfony/console": "~2|~3|~4|~5|",
     "tightenco/collect": "~5|~6|~7|~8"
     
   },
