--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "require": {
     "php": ">=5.5.0",
     "symfony/console": "~2|~3|~4|~5",
-    "tightenco/collect": "~5|~6|~7|~8"
+    "tightenco/collect": "^8.0"
     
   },
   "require-dev": {
